--- a/eventos.html
+++ b/eventos.html
@@ -22,12 +22,7 @@
         <nav class="main-nav">
             <ul class="list-main-nav">
                 <li class="nav-item"><a href="vistaAdministrador.html">Inicio</a></li>
-                <li class="nav-item"><a href="despachos.html">Despachos</a></li>
-                <li class="nav-item"><a href="inventarios.html">Inventarios</a></li>
                 <li class="nav-item"><a href="eventos.html">Eventos</a></li> 
-                <li class="nav-item" id="sign-up"><a href="reservaslogin.html">Reservas</a></li>
-                <li class="nav-item"><a href="proveedores.html">Proveedor</a></li> 
-                <li class="nav-item"><a href="clientes.html">Cliente</a></li>
 				<a href="index.html" class="icons-nav">
 					<i class="fa-solid fa-right-to-bracket"></i>
 				</a> 
@@ -69,7 +64,7 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr data-status="pendiente">
+						<tr>
 							<td>1</td>
 							<td>NombreApellido</td>
                             <td>20/02/2022</td>
@@ -83,7 +78,7 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-						<tr data-status="pendiente">
+						<tr>
 							<td>1</td>
 							<td>NombreApellido</td>
                             <td>20/02/2022</td>
@@ -97,7 +92,7 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-						<tr data-status="pendiente">
+						<tr>
 							<td>1</td>
 							<td>NombreApellido</td>
                             <td>20/02/2022</td>
@@ -111,7 +106,7 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-						<tr data-status="pendiente">
+						<tr>
 							<td>1</td>
 							<td>NombreApellido</td>
                             <td>20/02/2022</td>
@@ -125,7 +120,7 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-						<tr data-status="pendiente">
+						<tr>
 							<td>1</td>
 							<td>NombreApellido</td>
                             <td>20/02/2022</td>
@@ -139,7 +134,7 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-						<tr data-status="pendiente">
+						<tr>
 							<td>1</td>
 							<td>NombreApellido</td>
                             <td>20/02/2022</td>
@@ -153,7 +148,7 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-						<tr data-status="pendiente">
+						<tr>
 							<td>1</td>
 							<td>NombreApellido</td>
                             <td>20/02/2022</td>
@@ -167,7 +162,7 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-						<tr data-status="pendiente">
+						<tr>
 							<td>1</td>
 							<td>NombreApellido</td>
                             <td>20/02/2022</td>
@@ -181,7 +176,7 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-						<tr data-status="pendiente">
+						<tr>
 							<td>1</td>
 							<td>NombreApellido</td>
                             <td>20/02/2022</td>
@@ -195,7 +190,7 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-						<tr data-status="pendiente">
+						<tr>
 							<td>1</td>
 							<td>NombreApellido</td>
                             <td>20/02/2022</td>
@@ -209,7 +204,7 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-						<tr data-status="pendiente">
+						<tr>
 							<td>1</td>
 							<td>NombreApellido</td>
                             <td>20/02/2022</td>
@@ -223,7 +218,7 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-                        <tr data-status="pendiente">
+                        <tr>
 							<td>1</td>
 							<td>NombreApellido</td>
                             <td>20/02/2022</td>
@@ -237,7 +232,7 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-						<tr data-status="pendiente">
+						<tr>
 							<td>1</td>
 							<td>NombreApellido</td>
                             <td>20/02/2022</td>
@@ -251,7 +246,7 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-						<tr data-status="pendiente">
+						<tr>
 							<td>1</td>
 							<td>NombreApellido</td>
                             <td>20/02/2022</td>
@@ -265,7 +260,7 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-						<tr data-status="pendiente">
+						<tr>
 							<td>1</td>
 							<td>NombreApellido</td>
                             <td>20/02/2022</td>
@@ -281,9 +276,6 @@
 						</tr>
 					</tbody>
 				</table>
-				<div class="Generar">
-					<button class="btn btn-light" value="" onclick="exportTableToExcel('myTable')">Generar Reporte</button>
-				</div>
 			</div>
 
 <!-- Edit -->
@@ -383,6 +375,38 @@
 			</div>
 		</div>
 	</div>
+
+	 <!-- datatables con bootstrap -->
+	 <script src="https://cdn.datatables.net/1.10.23/js/jquery.dataTables.min.js"></script>
+	 <script src="https://cdn.datatables.net/1.10.23/js/dataTables.bootstrap5.min.js"></script>
+	
+	 <!-- Para usar los botones -->
+	 <script src="https://cdn.datatables.net/buttons/1.6.5/js/dataTables.buttons.min.js"></script>
+	 <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
+	 <script src="https://cdn.datatables.net/buttons/1.6.5/js/buttons.html5.min.js"></script>
+
+	<script>
+	$(document).ready(function () {
+		$("#myTable").DataTable({
+			dom: "Bfrtip",
+			buttons:{
+				dom: {
+					button: {
+						className: 'btn'
+					}
+				},
+				buttons: [
+				{
+					//definimos estilos del boton de excel
+					extend: "excel",
+					text:'Generar Reporte',
+					className:'btn btn-outline-success'
+				}
+				]            
+			}            
+		});
+	});
+	</script>
 	
 </main>    
 </body>
