--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 <ul class="list-main-nav">
                     <li class="nav-item"><a href="index.html">Inicio</a></li>
                     <li class="nav-item"><a href="servicios.html">Servicios</a></li>
-                    <li class="nav-item"><a href="quienessomos.html">Quiénes somos</a></li>
-                    <li class="nav-item"><a href="login.html">Iniciar Sesión</a></li> 
+                    <li class="nav-item"><a href="quienesSomos.html">Quiénes somos</a></li>
+                    <li class="nav-item"><a href="logIn.html">Iniciar Sesión</a></li> 
                     <li class="nav-item" id="sign-up"><a href="signup.html">Únete</a></li>  
                 </ul>
             </nav>
@@ -103,14 +103,14 @@
                     <img src="img/Sebastian.jpg" alt="Sebastian Barragan Basto" width="180" height="160">
                     <div class="descripcion">
                         <h3>Sebastian Barragan</h3>
-                        <p>Aprendiz Sena sebastinbarragan02@gmail.com</p>
+                        <p>Aprendiz Sena<br> sebastinbarragan02@gmail.com</p>
                         <span></span>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-start my-5">
                     <img src="img/Johan.jpeg" alt="Sebastian Barragan Basto" width="180" height="160">
                     <div class="descripcion">
-                        <h3>Johan Peña Franco</h3>
+                        <h3>Johan Peña</h3>
                         <p>Aprendiz Sena <br> francojohan321@gmail.com</p>
                         <span></span>
                     </div>
@@ -118,8 +118,8 @@
                 <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-start my-5">
                     <img src="img/icons8-user-skin-type-7-96.png" alt="Sebastian Barragan Basto" width="180" height="160">
                     <div class="descripcion">
-                        <h3>Sergio Chisica Cruz</h3>
-                        <p>Aprendiz Sena sergiochicruz2@gmail.com</p>
+                        <h3>Sergio Chisica</h3>
+                        <p>Aprendiz Sena <br> sergiochicruz2@gmail.com</p>
                         <!-- <span>Lo que no te mata te infecta</span> -->
                     </div>
                 </div>
@@ -127,7 +127,7 @@
                     <img src="img/icons8-user-skin-type-7-96.png" alt="Sebastian Barragan Basto" width="180" height="160">
                     <div class="descripcion">
                         <h3>Santaigo Muñoz</h3>
-                        <p>Aprendiz Sena muñozmasantiago1@gmail.com</p>
+                        <p>Aprendiz Sena <br> muñozmasantiago1@gmail.com</p>
                         <!-- <span>Lo que no te mata te infecta</span> -->
                     </div>
                 </div>
