--- a/iniciovistagerente.html
+++ b/iniciovistagerente.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inventarios</title>
+    <title>Inicio Gerente</title>
     <link rel="stylesheet" href="styles/nav.css">
     <link rel="stylesheet" href="styles/footer.css">
     <link rel="stylesheet" href="styles/iniciogerente.css">
@@ -32,8 +32,8 @@
             <div class="grid-prefil">
                     <div class="perfil">
                         <img src="img/icons8-administrator-male-96.png" alt="Administrador" width="180">
-                        <h3>Rene Gerente</h3>
-                        <p>Bienvenido!! Todo esta listo para que gestiones tu empresa<br> estadisticas de tu perfil <br> <br> <button class="btn btn-outline-secondary">Perfil</button></a></p>
+                        <h3>Fredy Gerente</h3>
+                        <p>Bienvenido!! Todo esta listo para que gestiones tu empresa<br> <br> <a href="usuariogerente.html" class="btn btn-outline-secondary">PERFIL</a></p>
                     </div>
             </div>
             <div class="grid-anidados">
