--- a/inventarios.html
+++ b/inventarios.html
@@ -22,12 +22,7 @@
         <nav class="main-nav">
             <ul class="list-main-nav">
                 <li class="nav-item"><a href="vistaAdministrador.html">Inicio</a></li>
-                <li class="nav-item"><a href="despachos.html">Despachos</a></li>
                 <li class="nav-item"><a href="inventarios.html">Inventarios</a></li>
-                <li class="nav-item"><a href="eventos.html">Eventos</a></li> 
-                <li class="nav-item" id="sign-up"><a href="reservaslogin.html">Reservas</a></li>
-                <li class="nav-item"><a href="proveedores.html">Proveedor</a></li> 
-                <li class="nav-item"><a href="clientes.html">Cliente</a></li>
 				<a href="index.html" class="icons-nav">
 					<i class="fa-solid fa-right-to-bracket"></i>
 				</a> 
@@ -67,7 +62,7 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr data-status="pendiente">
+						<tr>
 							<td>1</td>
 							<td>NomProducto</td>
 							<td>NomCategoria</td>
@@ -79,7 +74,7 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-						<tr data-status="activa">
+						<tr>
 							<td>2</td>
 							<td>NomProducto</td>
 							<td>NomCategoria</td>
@@ -91,7 +86,7 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-						<tr data-status="cancelada">
+						<tr>
                             <td>3</td>
 							<td>NomProducto</td>
 							<td>NomCategoria</td>
@@ -103,7 +98,7 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>      
 						</tr>
-						<tr data-status="activa">
+						<tr>
                             <td>4</td>
 							<td>NomProducto</td>
 							<td>NomCategoria</td>
@@ -115,7 +110,7 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-						<tr data-status="pendiente">
+						<tr>
 							<td>5</td>
 							<td>NomProducto</td>
 							<td>NomCategoria</td>
@@ -127,7 +122,7 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-						<tr data-status="pendiente">
+						<tr>
 							<td>6</td>
 							<td>NomProducto</td>
 							<td>NomCategoria</td>
@@ -139,7 +134,7 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-						<tr data-status="cancelada">
+						<tr>
 							<td>7</td>
 							<td>NomProducto</td>
 							<td>NomCategoria</td>
@@ -151,7 +146,7 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-						<tr data-status="cancelada">
+						<tr>
 							<td>8</td>
                             <td>NomProducto</td>
 							<td>NomCategoria</td>
@@ -163,7 +158,7 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-						<tr data-status="pendiente">
+						<tr>
 							<td>9</td>
 							<td>NomProducto</td>
 							<td>NomCategoria</td>
@@ -175,7 +170,7 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-						<tr data-status="activa">
+						<tr>
 							<td>10</td>
 							<td>NomProducto</td>
 							<td>NomCategoria</td>
@@ -187,7 +182,7 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-						<tr data-status="pendiente">
+						<tr>
 							<td>11</td>
 							<td>NomProducto</td>
 							<td>NomCategoria</td>
@@ -199,7 +194,7 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-						<tr data-status="pendiente">
+						<tr>
 							<td>12</td>
 							<td>NomProducto</td>
 							<td>NomCategoria</td>
@@ -211,7 +206,7 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-						<tr data-status="pendiente">
+						<tr>
 							<td>13</td>
 							<td>NomProducto</td>
 							<td>NomCategoria</td>
@@ -223,7 +218,7 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-						<tr data-status="activa">
+						<tr>
 							<td>14</td>
 							<td>NomProducto</td>
 							<td>NomCategoria</td>
@@ -235,7 +230,7 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-						<tr data-status="activa">
+						<tr>
 							<td>15</td>
 							<td>NomProducto</td>
 							<td>NomCategoria</td>
@@ -247,7 +242,7 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-						<tr data-status="cancelada">
+						<tr>
 							<td>16</td>
 							<td>NomProducto</td>
 							<td>NomCategoria</td>
@@ -259,7 +254,7 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-						<tr data-status="activa">
+						<tr>
 							<td>17</td>
 							<td>NomProducto</td>
 							<td>NomCategoria</td>
@@ -271,7 +266,7 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-						<tr data-status="pendiente">
+						<tr>
 							<td>18</td>
 							<td>NomProducto</td>
 							<td>NomCategoria</td>
@@ -283,7 +278,7 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-						<tr data-status="activa">
+						<tr>
 							<td>19</td>
 							<td>NomProducto</td>
 							<td>NomCategoria</td>
@@ -295,7 +290,7 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-						<tr data-status="pendiente">
+						<tr>
 							<td>20</td>
 							<td>NomProducto</td>
 							<td>NomCategoria</td>
@@ -307,7 +302,7 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-						<tr data-status="cancelada">
+						<tr>
 							<td>21</td>
 							<td>NomProducto</td>
 							<td>NomCategoria</td>
@@ -319,7 +314,7 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-						<tr data-status="`pendiente">
+						<tr>
 							<td>22</td>
 							<td>NomProducto</td>
 							<td>NomCategoria</td>
@@ -331,12 +326,8 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-
 					</tbody>
 				</table>
-				<div class="Generar">
-					<button class="btn btn-light" value="" onclick="exportTableToExcel('myTable')">Generar Reporte</button>
-				</div>
 			</div>
 
 <!-- Edit -->
@@ -442,7 +433,39 @@
 			</div>
 		</div>
 	</div>
+
+	 <!-- datatables con bootstrap -->
+	 <script src="https://cdn.datatables.net/1.10.23/js/jquery.dataTables.min.js"></script>
+	 <script src="https://cdn.datatables.net/1.10.23/js/dataTables.bootstrap5.min.js"></script>
 	
+	 <!-- Para usar los botones -->
+	 <script src="https://cdn.datatables.net/buttons/1.6.5/js/dataTables.buttons.min.js"></script>
+	 <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
+	 <script src="https://cdn.datatables.net/buttons/1.6.5/js/buttons.html5.min.js"></script>
+
+	<script>
+	$(document).ready(function () {
+		$("#myTable").DataTable({
+			dom: "Bfrtip",
+			buttons:{
+				dom: {
+					button: {
+						className: 'btn'
+					}
+				},
+				buttons: [
+				{
+					//definimos estilos del boton de excel
+					extend: "excel",
+					text:'Generar Reporte',
+					className:'btn btn-outline-success'
+				}
+				]            
+			}            
+		});
+	});
+	</script>
+
 </main>    
 </body>
 </html>
