--- a/perfilcliente.html
+++ b/perfilcliente.html
@@ -32,14 +32,14 @@
         <div class="grid-prefil">
                 <div class="perfil">
                     <img src="img/icons8-user-skin-type-7-96.png" alt="Administrador" width="180">
-                    <h3>Johan cliente</h3>
-                    <p>Bienvenido!! Todo esta listo para que gestiones tus reservas y tu perfil<br> estadisticas de tu perfil <br> <br> <button class="btn btn-outline-secondary">Perfil</button></a></p>
+                    <h3>Johan Peña <br> cliente</h3>
+                    <p>Bienvenido!! Todo esta listo para que gestiones tus reservas y tu perfil <br> <br> <a href="usuariocliente.html" class="btn btn-outline-secondary">PERFIL</a></p>
                 </div>
         </div>
         <div class="grid-anidados">
              <div class="anidados01"><h4>Tus reservas</h4> <a href="historialclienteReserva.html" class="a"><img class="ims" src="img/reserva2.png" alt="" width="200"></a></div>
-             <div class="anidados02"><h4>Tus datos</h4> <a href="usuariocliente.html" class="a"><img class="ims" src="img/perfil.png" alt="" width="200"></a></div>
              <div class="anidados03"><h4>Crea reservas</h4> <a href="reservas.html" class="a"><img class="ims" src="img/reserva.png" alt="" width="200"></a></div>
+             <div class="anidados02"><h4>Tus datos</h4> <a href="usuariocliente.html" class="a"><img class="ims" src="img/perfil.png" alt="" width="200"></a></div>
         </div>
     </div>
     </main>
