--- a/quienesSomos.html
+++ b/quienesSomos.html
@@ -22,8 +22,8 @@
                 <ul class="list-main-nav">
                     <li class="nav-item"><a href="index.html">Inicio</a></li>
                     <li class="nav-item"><a href="servicios.html">Servicios</a></li>
-                    <li class="nav-item"><a href="quienessomos.html">Quiénes somos</a></li>
-                    <li class="nav-item"><a href="login.html">Iniciar Sesión</a></li> 
+                    <li class="nav-item"><a href="quienesSomos.html">Quiénes somos</a></li>
+                    <li class="nav-item"><a href="logIn.html">Iniciar Sesión</a></li> 
                     <li class="nav-item" id="sign-up"><a href="signup.html">Únete</a></li>  
                 </ul>
             </nav>
@@ -77,16 +77,14 @@
                             <img src="img/icons8-administrator-male-96.png" alt="Sebastian Barragan Basto" width="180" height="160">
                             <div class="descripcion">
                                 <h3>Rene Malaver</h3>
-                                <p>Gerente Empresa Renema5642@gmail.com</p>
-                                <span>Lo que no te mata te infecta</span>
+                                <p>Administrador <br> Yelmos logistica y soluciones <br> Renema5642@gmail.com</p>
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-start my-5">
                             <img src="img/icons8-administrator-male-96.png" alt="Sebastian Barragan Basto" width="180" height="160">
                             <div class="descripcion">
-                                <h3>Henry Malaver</h3>
-                                <p>Gerente Empresa Henryma1564@gmail.com</p>
-                                <span>Lo que no te mata te infecta</span>
+                                <h3>Fredy Malaver</h3>
+                                <p>Gerente <br> Yelmos logistica y soluciones <br> Fredyma1564@gmail.com</p>
                             </div>
                         </div>
                     </div>
