--- a/reservas.html
+++ b/reservas.html
@@ -20,13 +20,9 @@
             <a href="#" class="logo"><img src="img/Logo Team Digital Yelmos.jpeg" alt=""></a>
             <nav class="main-nav">
                 <ul class="list-main-nav">
-                    <li class="nav-item"><a href="iniciocliente.html">Inicio</a></li>
+                    <li class="nav-item"><a href="perfilcliente.html">Inicio</a></li>
                     <li class="nav-item"><a href="servicioscliente.html">Servicios</a></li>
-                    <li class="nav-item"><a href="quienesSomoscliente.html">Quiénes somos</a></li>
                     <li class="nav-item"><a href="reservas.html">Reservar</a></li>
-                    <a href="perfilcliente.html" class="icons-nav">
-                        <i class="fa-solid fa-user"></i>
-                    </a> 
                     <a href="index.html" class="icons-nav">
                         <i class="fa-solid fa-right-to-bracket"></i>
                     </a>
