--- a/usuarioAdministrador.html
+++ b/usuarioAdministrador.html
@@ -21,8 +21,8 @@
 			<a href="#" class="logo"><img src="img/Logo Team Digital Yelmos.jpeg" alt=""></a>
 			<nav class="main-nav">
 				<ul class="list-main-nav">
-					<li class="nav-item"><a href="iniciovistagerente.html">Inicio</a></li>
-                	<li class="nav-item"><a href="usuariogerente.html">Tus datos</a></li>
+					<li class="nav-item"><a href="vistaAdministrador.html">Inicio</a></li>
+                	<li class="nav-item"><a href="usuarioAdministrador.html">Tus datos</a></li>
                 	<li class="nav-item"><a href="index.html"><i class="fa-solid fa-right-to-bracket"></i></a></li> 
 				</ul>
 			</nav>
