--- a/inicioCliente.html
+++ b/inicioCliente.html
@@ -22,7 +22,7 @@
                 <ul class="list-main-nav">
                     <li class="nav-item"><a href="iniciocliente.html">Inicio</a></li>
                     <li class="nav-item"><a href="servicioscliente.html">Servicios</a></li>
-                    <li class="nav-item"><a href="quienessomoscliente.html">Quiénes somos</a></li>
+                    <li class="nav-item"><a href="quienesSomosCliente.html">Quiénes somos</a></li>
                     <li class="nav-item"><a href="reservas.html">Reserva</a></li>
                     <a href="perfilcliente.html" class="icons-nav">
                         <i class="fa-solid fa-user"></i>
