--- a/inventariosGe.html
+++ b/inventariosGe.html
@@ -23,7 +23,6 @@
             <ul class="list-main-nav">
                 <li class="nav-item"><a href="iniciovistagerente.html">Inicio</a></li>
                 <li class="nav-item"><a href="inventariosGe.html">Inventarios</a></li>
-                <li class="nav-item" id="sign-up"><a href="ReservasGe.html">Reservas</a></li>
 				<a href="/index.html" class="icons-nav">
 					<i class="fa-solid fa-right-to-bracket"></i>
 				</a> 
@@ -63,7 +62,7 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr data-status="pendiente">
+						<tr>
 							<td>1</td>
 							<td>NomProducto</td>
 							<td>NomCategoria</td>
@@ -75,7 +74,7 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-						<tr data-status="activa">
+						<tr>
 							<td>2</td>
 							<td>NomProducto</td>
 							<td>NomCategoria</td>
@@ -87,7 +86,7 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-						<tr data-status="cancelada">
+						<tr>
                             <td>3</td>
 							<td>NomProducto</td>
 							<td>NomCategoria</td>
@@ -99,7 +98,7 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>      
 						</tr>
-						<tr data-status="activa">
+						<tr>
                             <td>4</td>
 							<td>NomProducto</td>
 							<td>NomCategoria</td>
@@ -111,7 +110,7 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-						<tr data-status="pendiente">
+						<tr>
 							<td>5</td>
 							<td>NomProducto</td>
 							<td>NomCategoria</td>
@@ -123,7 +122,7 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-						<tr data-status="pendiente">
+						<tr>
 							<td>6</td>
 							<td>NomProducto</td>
 							<td>NomCategoria</td>
@@ -135,7 +134,7 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-						<tr data-status="cancelada">
+						<tr>
 							<td>7</td>
 							<td>NomProducto</td>
 							<td>NomCategoria</td>
@@ -147,7 +146,7 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-						<tr data-status="cancelada">
+						<tr>
 							<td>8</td>
                             <td>NomProducto</td>
 							<td>NomCategoria</td>
@@ -159,7 +158,7 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-						<tr data-status="pendiente">
+						<tr>
 							<td>9</td>
 							<td>NomProducto</td>
 							<td>NomCategoria</td>
@@ -171,7 +170,7 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-						<tr data-status="activa">
+						<tr>
 							<td>10</td>
 							<td>NomProducto</td>
 							<td>NomCategoria</td>
@@ -183,7 +182,7 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-						<tr data-status="pendiente">
+						<tr>
 							<td>11</td>
 							<td>NomProducto</td>
 							<td>NomCategoria</td>
@@ -195,7 +194,7 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-						<tr data-status="pendiente">
+						<tr>
 							<td>12</td>
 							<td>NomProducto</td>
 							<td>NomCategoria</td>
@@ -207,7 +206,7 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-						<tr data-status="pendiente">
+						<tr>
 							<td>13</td>
 							<td>NomProducto</td>
 							<td>NomCategoria</td>
@@ -219,7 +218,7 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-						<tr data-status="activa">
+						<tr>
 							<td>14</td>
 							<td>NomProducto</td>
 							<td>NomCategoria</td>
@@ -231,7 +230,7 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-						<tr data-status="activa">
+						<tr>
 							<td>15</td>
 							<td>NomProducto</td>
 							<td>NomCategoria</td>
@@ -243,7 +242,7 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-						<tr data-status="cancelada">
+						<tr>
 							<td>16</td>
 							<td>NomProducto</td>
 							<td>NomCategoria</td>
@@ -255,7 +254,7 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-						<tr data-status="activa">
+						<tr>
 							<td>17</td>
 							<td>NomProducto</td>
 							<td>NomCategoria</td>
@@ -267,7 +266,7 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-						<tr data-status="pendiente">
+						<tr>
 							<td>18</td>
 							<td>NomProducto</td>
 							<td>NomCategoria</td>
@@ -279,7 +278,7 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-						<tr data-status="activa">
+						<tr>
 							<td>19</td>
 							<td>NomProducto</td>
 							<td>NomCategoria</td>
@@ -291,7 +290,7 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-						<tr data-status="pendiente">
+						<tr>
 							<td>20</td>
 							<td>NomProducto</td>
 							<td>NomCategoria</td>
@@ -303,7 +302,7 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-						<tr data-status="cancelada">
+						<tr>
 							<td>21</td>
 							<td>NomProducto</td>
 							<td>NomCategoria</td>
@@ -315,7 +314,7 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-						<tr data-status="`pendiente">
+						<tr>
 							<td>22</td>
 							<td>NomProducto</td>
 							<td>NomCategoria</td>
@@ -327,12 +326,8 @@
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-
 					</tbody>
 				</table>
-				<div class="Generar">
-					<button class="btn btn-light" value="" onclick="exportTableToExcel('myTable')">Generar Reporte</button>
-				</div>
 			</div>
 
 <!-- Edit -->
@@ -438,6 +433,37 @@
 			</div>
 		</div>
 	</div>
+	 <!-- datatables con bootstrap -->
+	 <script src="https://cdn.datatables.net/1.10.23/js/jquery.dataTables.min.js"></script>
+	 <script src="https://cdn.datatables.net/1.10.23/js/dataTables.bootstrap5.min.js"></script>
+	
+	 <!-- Para usar los botones -->
+	 <script src="https://cdn.datatables.net/buttons/1.6.5/js/dataTables.buttons.min.js"></script>
+	 <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
+	 <script src="https://cdn.datatables.net/buttons/1.6.5/js/buttons.html5.min.js"></script>
+
+	<script>
+	$(document).ready(function () {
+		$("#myTable").DataTable({
+			dom: "Bfrtip",
+			buttons:{
+				dom: {
+					button: {
+						className: 'btn'
+					}
+				},
+				buttons: [
+				{
+					//definimos estilos del boton de excel
+					extend: "excel",
+					text:'Generar Reporte',
+					className:'btn btn-outline-success'
+				}
+				]            
+			}            
+		});
+	});
+	</script>
 	
 </main>    
 </body>
