--- a/vistaAdministrador.html
+++ b/vistaAdministrador.html
@@ -30,14 +30,12 @@
 	</header>
     
     <main class="main">
-
-
         <div class="grid">
             <div class="grid-prefil">
                     <div class="perfil">
                         <img src="img/icons8-administrator-male-96.png" alt="Administrador" width="180">
-                        <h3>Fredi Administrador</h3>
-                        <p>Bienvenido!! Todo esta listo para que gestiones tu empresa<br> Revisa o gestiona tu perfil <br> <br> <button class="btn btn-outline-secondary">Perfil</button></a></p>
+                        <h3> Rene Malaver <br>Administrador</h3>
+                        <p>Bienvenido!!! Todo esta listo para que gestiones tu empresa<br><br> Revisa o gestiona tu perfil <br><a href="usuarioAdministrador.html" class="btn btn-outline-secondary">PERFIL</a></p>
                     </div>
             </div>
             <div class="grid-anidados">
