--- a/404.html
+++ b/404.html
@@ -51,7 +51,10 @@
         <p>
             Disculpa las molestias. 
         </p>
-        <button type="button" class="btn btn-outline-primary">Página Pricipal</button>
+        <a href="index.html">
+            <button type="button" class="btn btn-outline-primary">Página Pricipal</button>
+        </a>
+        
     </div>
 </body>
 </html>
