--- a/vistaAdministrador.html
+++ b/vistaAdministrador.html
@@ -39,11 +39,11 @@
                     </div>
             </div>
             <div class="grid-anidados">
-                 <div class="anidados01"><h4>Despachos</h4> <a href="despachos.html" class="a"><img class="ims" src="/img/despac.png" alt="" width="200"></a></div>
-                 <div class="anidados02"><h4>Inventarios</h4> <a href="inventarios.html" class="a"><img class="ims" src="/img/inventar.png" alt="" width="200"></a></div>
-                 <div class="anidados03"><h4>Eventos</h4> <a href="eventos.html" class="a"><img class="ims" src="/img/event.png" alt="" width="200"></a></div>
-                 <div class="anidados04"><h4>Reservas</h4><a href="reservaslogin.html" class="a"><img class="ims" src="/img/reserva.png" alt="" width="200"></a> </div>
-                 <div class="anidados05"><h4>proveedores</h4> <a href="proveedores.html" class="a"><img class="ims" src="/img/proveedor.png" alt="" width="200"></a></div>
+                 <div class="anidados01"><h4>Despachos</h4> <a href="despachos.html" class="a"><img class="ims" src="img/despac.png" alt="" width="200"></a></div>
+                 <div class="anidados02"><h4>Inventarios</h4> <a href="inventarios.html" class="a"><img class="ims" src="img/inventar.png" alt="" width="200"></a></div>
+                 <div class="anidados03"><h4>Eventos</h4> <a href="eventos.html" class="a"><img class="ims" src="img/event.png" alt="" width="200"></a></div>
+                 <div class="anidados04"><h4>Reservas</h4><a href="reservaslogin.html" class="a"><img class="ims" src="img/reserva.png" alt="" width="200"></a> </div>
+                 <div class="anidados05"><h4>proveedores</h4> <a href="proveedores.html" class="a"><img class="ims" src="img/proveedor.png" alt="" width="200"></a></div>
                  <div class="anidados06"><h4>Clientes</h4> <a href="clientes.html" class=""> <img class="ims" src="img/usu.png" alt="" width="200"></a></div>
             </div>
         </div>
