se corrige el enlace de reservas

--- a/reservasLogin.html
+++ b/reservasLogin.html
@@ -22,7 +22,7 @@
         <nav class="main-nav">
             <ul class="list-main-nav">
                 <li class="nav-item"><a href="vistaAdministrador.html">Inicio</a></li>
-                <li class="nav-item" id="sign-up"><a href="reservaslogin.html">Packing</a></li>
+                <li class="nav-item" id="sign-up"><a href="reservasLogin.html">Packing</a></li>
                 <li class="nav-item"><a href="reservasLogin2.html">Material P.O.P</a></li> 
 				<a href="index.html" class="icons-nav">
 					<i class="fa-solid fa-right-to-bracket"></i>
