--- a/proveedores.html
+++ b/proveedores.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-	<script src="/script/Despacho.js"></script>
+	<script src="script/Despacho.js"></script>
 	<script src="https://kit.fontawesome.com/1d159cd404.js" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -67,7 +67,7 @@
 							<th>Apellidos</th>
 							<th>Email</th>
 							<th>Telefono</th>
-							<th>Estado</th>
+							<!-- <th>Estado</th> -->
 							<th>Edit/Delete</th>
 						</tr>
 					</thead>
@@ -79,7 +79,7 @@
 							<td>apellido1 apellido2</td>
 							<td>ejemplo@gmail.com</td>
 							<td>123456789</td>
-							<td><span class="status text-success">&bull;</span> Activo </td>
+							<!-- <td><span class="status text-success">&bull;</span> Activo </td> -->
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
@@ -92,7 +92,7 @@
 							<td>apellido1 apellido2</td>
 							<td>ejemplo@gmail.com</td>
 							<td>123456789</td>
-							<td><span class="status text-success">&bull;</span> Activo </td>
+							<!-- <td><span class="status text-success">&bull;</span> Activo </td> -->
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
@@ -105,7 +105,7 @@
 							<td>apellido1 apellido2</td>
 							<td>ejemplo@gmail.com</td>
 							<td>123456789</td>
-							<td><span class="status text-danger">&bull;</span> Bloqueado </td>                      
+							<!-- <td><span class="status text-danger">&bull;</span> Bloqueado </td>   -->                    
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
@@ -118,7 +118,7 @@
 							<td>apellido1 apellido2</td>
 							<td>ejemplo@gmail.com</td>
 							<td>123456789</td>
-							<td><span class="status text-success">&bull;</span> Activo</td>
+							<!-- <td><span class="status text-success">&bull;</span> Activo</td> -->
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
@@ -131,7 +131,7 @@
 							<td>apellido1 apellido2</td>
 							<td>ejemplo@gmail.com</td>
 							<td>123456789</td>
-							<td><span class="status text-success">&bull;</span> Activo </td>
+							<!-- <td><span class="status text-success">&bull;</span> Activo </td> -->
 						    <td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
@@ -144,7 +144,7 @@
 							<td>apellido1 apellido2</td>
 							<td>ejemplo@gmail.com</td>
 							<td>123456789</td>
-							<td><span class="status text-danger">&bull;</span>Bloqueado </td>
+							<!-- <td><span class="status text-danger">&bull;</span>Bloqueado </td> -->
 						    <td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
@@ -157,7 +157,7 @@
 							<td>apellido1 apellido2</td>
 							<td>ejemplo@gmail.com</td>
 							<td>123456789</td>
-							<td><span class="status text-danger">&bull;</span> Bloqueado</td>
+							<!-- <td><span class="status text-danger">&bull;</span> Bloqueado</td> -->
 						    <td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
@@ -170,7 +170,7 @@
 							<td>apellido1 apellido2</td>
 							<td>ejemplo@gmail.com</td>
 							<td>123456789</td>
-							<td><span class="status text-danger">&bull;</span> Bloqueado </td>
+							<!-- <td><span class="status text-danger">&bull;</span> Bloqueado </td> -->
 						    <td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
@@ -183,7 +183,7 @@
 							<td>apellido1 apellido2</td>
 							<td>ejemplo@gmail.com</td>
 							<td>123456789</td>
-							<td><span class="status text-success">&bull;</span> Activo </td>
+							<!-- <td><span class="status text-success">&bull;</span> Activo </td> -->
 						    <td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
@@ -196,7 +196,7 @@
 							<td>apellido1 apellido2</td>
 							<td>ejemplo@gmail.com</td>
 							<td>123456789</td>
-							<td><span class="status text-success">&bull;</span> Activo </td>
+							<!-- <td><span class="status text-success">&bull;</span> Activo </td> -->
 						    <td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
